2nd work is done

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to Rainy Weather</h1>
-    <button>Clear</button>
+    <p>This is Contact page</p>
 </body>
 </html>
