--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Welcome to Rainy Weather</h1>
+    <label for="">Username</label>
     <button>Clear</button>
 </body>
 </html>
