--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Welcome to Rainy Weather</h1>
     <label for="">Username</label>
     <button>Clear</button>
+    <h3>Hello</h3>
 </body>
 </html>
